Fix dark gradient on album covers in song grid by realigning it correctly

--- a/app/assets/stylesheets/base/splashpage/song_grid.scss
+++ b/app/assets/stylesheets/base/splashpage/song_grid.scss
@@ -91,7 +91,7 @@
         height: 100%;
         width: 100%;
         content: '';
-        bottom: 100%;
+        bottom: 102%;
       }
   } 
   .text-div{
